# sycamore-pokedex

./: .gitignore  Cargo.toml  Trunk.toml  deploy.fish  index.html  sycamore-todo-17d1ea7a5e4a47b2.js  sycamore-todo-1b4ca21cd97bdb11.js  sycamore-todo-4b8db19c6e830722.js  sycamore-todo-4b8db19c6e830722_bg.wasm  sycamore-todo-c0bdac0fb0dd3a1c.js  tailwind.config.js  tailwind.css
public/: sycamore-todo-c0bdac0fb0dd3a1c_bg.wasm
src/: main.rs
src/pages/: index.rs  mod.rs  not_found.rs  pokemon.rs
