[package]
name = "sycamore-pokedex"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.20"
reqwasm = "0.5.0"
serde = "1.0.183"
serde_json = "1.0.105"
sycamore = { version = "0.8.2", features = [
    "suspense",
] }
sycamore-router = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pokeapi-types]
git = "https://github.com/Phoeenix05/pokeapi-types"
branch = "main"
